--- a/src/components/NewTodoTask/NewTodoTask.module.scss
+++ b/src/components/NewTodoTask/NewTodoTask.module.scss
@@ -1,5 +1,6 @@
 .newTask {
   display: Flex;
+  position: relative;
   padding-top: 200px;
 }
 .input,
@@ -17,4 +18,26 @@
   font-size: 2rem;
 
   cursor: pointer;
+}
+.errorMessage {
+  position: absolute;
+  color: rgb(58, 28, 28);
+  border: 1px solid rgb(156, 31, 31);
+  border-radius: 3px;
+  font-size: 1.2em;
+  left: 20px;
+  top: 100%;
+  background-color: rgb(223, 62, 62);
+  &::before {
+    content: ' ';
+    position: absolute;
+    top:-10px;
+    left: 10px;
+    width: 0;
+    height: 0;
+    
+    border-style: solid;
+    border-width: 0 7.5px 10px 7.5px;
+    border-color: transparent transparent rgb(156, 31, 31) transparent;
+  }
 }
